# sqlintel

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
benchmark/: README.md  __init__.py  harness.py  results.json  results.md  run_benchmark.py  targets.py
benchmark/dvwa/: results.json  results.md
notebooks/: train_classifier.ipynb
scripts/: generate_dataset.py  train_model.py
sqlintel/: __init__.py  cli.py
sqlintel/core/: engine.py  http_client.py  request_parser.py  target.py
sqlintel/crawler/: __init__.py  builder.py  crawler.py  scope.py
sqlintel/detectors/: __init__.py  base.py  boolean_based.py  error_based.py  time_based.py  union_based.py
sqlintel/ml/: features.py  triage.py
sqlintel/payloads/: data.py
sqlintel/report/: reporter.py
sqlintel/verify/: __init__.py  proof.py
tests/: mock_vuln_server.py  test_benchmark.py  test_core.py  test_crawler.py
