[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlintel"
version = "0.1.0"
description = "AI-augmented SQL injection vulnerability scanner with browser-based crawling and proof-based verification."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "mayan" }]
keywords = ["security", "sql-injection", "scanner", "dast", "machine-learning"]
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
]

[project.optional-dependencies]
# Installed only when you start the crawler / ML phases. Keeps the core light.
crawler = ["playwright>=1.44"]
ml = ["scikit-learn>=1.4", "xgboost>=2.0", "pandas>=2.0", "joblib>=1.3"]
dev = ["pytest>=8.0"]

[project.scripts]
sqlintel = "sqlintel.cli:main"

[tool.setuptools.packages.find]
include = ["sqlintel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
